# BareMetalRust

./: .gitignore  ARM-Regs.md  Cargo.toml  MyLinkerFile.ld  MySTM.resc  README.md  build.rs  build.sh  run.sh  rust-toolchain.toml
.cargo/: config
linker/: lm3s6965.ld
src/: boards.rs  hal.rs  kernel.rs  logger.rs  main.rs  startup.rs  usart_driver.rs
src/boards/: lm3s6965.rs
src/boards/lm3s6965/: scb_map.rs  systick_map.rs  uart_map.rs  vector_table.rs
src/hal/: interrupts.rs  scb.rs  systick.rs  uart.rs  unsafe_io.rs
src/kernel/: app_config.rs  task.rs
