[package]
name = "RustRTOS"
version = "0.1.0"
edition = "2021"

[features]
lm3s6965 = []
stm32f103 = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"      # Removes the stack unwinding machinery
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization (removes unused code)
codegen-units = 1    # Allows deeper optimization
strip = "symbols"         # Automatically removes debug symbols